--- a/app/src/main/res/layout/activity_bus_main.xml
+++ b/app/src/main/res/layout/activity_bus_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ShuttleBusMainActivity">>
 
+<!-- 셔틀버스 메인 화면 표 -->
     <TableLayout
 
         android:orientation="vertical"
