--- a/app/src/main/res/layout/activity_anniversary50th.xml
+++ b/app/src/main/res/layout/activity_anniversary50th.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".Anniversary50thActivity">
 
+<!-- 50주년 기념관 교내상점 정보 -->
     <TextView
         android:id="@+id/fifty_text1"
         android:layout_width="match_parent"
@@ -18,6 +19,7 @@
         android:fontFamily="@font/scdream7"
         android:textSize="38sp"></TextView>
 
+<!-- 1층 -->
     <TextView
         android:id="@+id/fifty_text2"
         android:layout_width="match_parent"
@@ -28,6 +30,7 @@
         android:text="1F"
         android:textSize="24sp"></TextView>
 
+<!-- 1층 첫째줄 가게 정보 -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,7 +77,7 @@
             android:fontFamily="@font/cafe24surround"
             android:text="감탄\n떡볶이" />
     </LinearLayout>
-
+<!-- 2층 둘째줄 가게 정보 -->
     <LinearLayout
         android:layout_width="339dp"
         android:layout_height="64dp"
@@ -91,7 +94,7 @@
             android:text="CU" />
     </LinearLayout>
 
-
+<!-- 지하 1층 -->
     <TextView
         android:id="@+id/fifty_text3"
         android:layout_width="match_parent"
@@ -103,6 +106,7 @@
         android:text="B1F"
         android:textSize="24sp"/>
 
+<!-- 지하 1층 가게 정보 -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
