--- a/app/src/main/res/layout/activity_auditorium.xml
+++ b/app/src/main/res/layout/activity_auditorium.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".AuditoriumActivity">
 
+<!-- 대강당 교내상점 정보 -->
     <TextView
         android:id="@+id/aud_text1"
         android:layout_width="match_parent"
@@ -18,6 +19,7 @@
         android:text="대강당"
         android:textSize="38sp"></TextView>
 
+<!-- 2층 -->
     <TextView
         android:id="@+id/aud_text2"
         android:layout_width="match_parent"
@@ -46,6 +48,7 @@
 
     </LinearLayout>
 
+<!-- 1층 -->
     <TextView
         android:id="@+id/aud_text3"
         android:layout_width="match_parent"
