--- a/app/src/main/res/layout/activity_cafeteria.xml
+++ b/app/src/main/res/layout/activity_cafeteria.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical"
     tools:context=".CafeteriaActivity">
 
+    <!-- 식당 운영 시간 -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +40,7 @@
         </TextView>
     </LinearLayout>
 
-
+    <!-- 기숙사 식당 운영 시간 -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
