--- a/app/src/main/res/layout/activity_joyegwan2.xml
+++ b/app/src/main/res/layout/activity_joyegwan2.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".JoyegwanActivity">
 
+    <!-- 조형예술관 학교공간 정보 -->
     <TextView
         android:id="@+id/joye2_text1"
         android:layout_width="match_parent"
