--- a/app/src/main/res/layout/activity_kidok.xml
+++ b/app/src/main/res/layout/activity_kidok.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".InsagwanActivity">
 
+    <!-- 기독교교육관 학교공간 정보 -->
     <TextView
         android:id="@+id/kidok_text1"
         android:layout_width="match_parent"
