--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".LibraryCafeActivity">
 
+    <!-- 중앙도서관 학교공간 정보 -->
     <TextView
         android:id="@+id/lib_text1"
         android:layout_width="match_parent"
