--- a/app/src/main/res/layout/activity_nurigwan.xml
+++ b/app/src/main/res/layout/activity_nurigwan.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".NurigwanActivity">
 
+    <!-- 학생누리관 교내상점 정보 -->
     <TextView
         android:id="@+id/nuri_text1"
         android:layout_width="match_parent"
