--- a/app/src/main/res/layout/activity_science2.xml
+++ b/app/src/main/res/layout/activity_science2.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".InsagwanActivity">
 
+    <!-- 제2과학관 학교공간 정보 -->
     <TextView
         android:id="@+id/sci2_text1"
         android:layout_width="match_parent"
