--- a/app/src/main/res/layout/activity_shalom.xml
+++ b/app/src/main/res/layout/activity_shalom.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".ShalomActivity">
 
+    <!-- 샬롬하우스 교내상점 정보 -->
     <TextView
         android:id="@+id/shalom_text1"
         android:layout_width="match_parent"
