교내상점/학교공간 이미지 추가

--- a/app/src/main/res/layout/activity_insagwan.xml
+++ b/app/src/main/res/layout/activity_insagwan.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/insa"
     tools:context=".InsagwanActivity">
 
     <!-- 인사관 교내상점 정보 -->
