--- a/app/src/main/res/layout/activity_science1.xml
+++ b/app/src/main/res/layout/activity_science1.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/sci1"
     tools:context=".JoyegwanActivity">
 
     <!-- 제1과학관 학교공간 정보 -->
