--- a/app/src/main/res/layout/activity_nurigwan.xml
+++ b/app/src/main/res/layout/activity_nurigwan.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/nuri"
     tools:context=".NurigwanActivity">
 
     <!-- 학생누리관 교내상점 정보 -->
